# reepo-dev-platform

./: .dockerignore  .gitignore  Dockerfile  PROGRESS.md  README.md  ROADMAP.md  SESSION_LOG.md  pyproject.toml  railway.json  start.sh  vercel.json
.github/: REEPO_RULES.md
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  globals.css  index.css  main.tsx
scripts/: batch_summarize.py  fix_categories_and_scores.py  refine_summaries.py
src/: __init__.py  analytics.py  analyzer.py  cache.py  cli.py  crawler.py  db.py  middleware.py  og_cards.py  open_data.py  search.py  seed.py  seo.py  server.py  similar.py  taxonomy.py  trending.py  use_case_extractor.py
src/api/: __init__.py  admin.py  admin_analytics.py  api_keys.py  seo.py  (+28 more)
tests/: test_admin.py  test_affiliates.py  test_analytics.py  test_analyzer.py  test_api.py  test_auth_api.py  test_auth_db.py  test_auth_middleware.py  test_awesome_import.py  test_badges.py  test_billing.py  test_blog.py  test_bots_api.py  test_bots_core.py  test_built_with.py  test_cache.py  test_changelog.py  test_cli.py  test_collections_db.py  test_comments.py  test_community.py  test_community_admin.py  test_community_api.py  test_comparison.py  test_contributors.py  test_crawler.py  test_db.py  test_digest.py  test_discord_bot.py  test_export.py  test_gates.py  test_github_oauth.py  test_growth_api.py  test_growth_db.py  test_jwt_auth.py  test_metering.py  test_middleware.py  test_newsletter.py  test_og_cards.py  test_open_data.py  (+13 more)
(+86 files in other folders)
